--- a/index.html
+++ b/index.html
@@ -8,10 +8,22 @@
     </head>
     <body>
         <header>
-            <h1>Discover hidden places in the world around you</h1>
+            <h1 class="title">Discover hidden places in the world around you</h1>
+            <p class="download"><u>Download Excursion (Coming Soon)</u></p>
         </header>
         <main>
-
+            <video autoplay='autoplay'>
+                <source src="resources/excursion.mp4" type="video/mp4">
+            </video>
+            <h2 class="smaller-title">Your personal travel guide</h2>
+            <p class="description">Excursion remembers places you like, and recommends new points of interest around you.</p>
+            <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg">
         </main>
+        <footer>
+            <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png">
+            <h2 class="smaller-title">Coming soon for iPhone and Android</h2>
+            <p class="download"><u>Download Excursion (Coming Soon)</u></p>
+            <p class="copyright">&#169; Excursion</p>
+        </footer>
     </body>
 </html>
